src/snapshots/parse_expression_left_shift_is_left_associative.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 1<<2<<3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - left_shift
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - left_shift
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "1"
                - decimal
          - location:
              line: 1
              column: 4
            kind:
              int_constant:
                - "2"
                - decimal
    - location:
        line: 1
        column: 7
      kind:
        int_constant:
          - "3"
          - decimal
