src/snapshots/parse_expression_simple_left_shift.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 1 << 2
---
location:
  line: 1
  column: 1
kind:
  binary:
    - left_shift
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "1"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "2"
          - decimal
